nooblib: improve first startup check
less config garbage caused by the check if this is the first startup of
the current nsl version

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -356,13 +356,13 @@ bindOptionalKey = [
 ]
 
 // Check first start after installation or updating the NSL
-if (! (strcmp (getalias (concatword "nslFirstStartV" $nslVersion)) "1")) [
+if (!=s (getalias "nslLastVersionStartup") $nslVersion) [
 	
 	newgui "Nooby's Script Library" [
 		guititle (concatword "Nooby's Script Library v"$nslVersion " (Short: NSL)");
 		guitext (concatword "Thank you "(getname)", for installing or updating the NSL!");
 		guibar
-		guibutton "Let's play!" [showgui main; (concatword "nslFirstStartV" $nslVersion) = 1] (playermodelicon);
+		guibutton "Let's play!" [showgui main; nslLastVersionStartup = $nslVersion] (playermodelicon);
 		
 		guitab "Changelog"
 		showfileeditor "packages/scripts/nsl_changelog.txt" -60 11
