noobafk: afk_undo when disconnecting from server
now triggers afk_undo if you are in afk-state and disconnect from a
server

--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -25,7 +25,7 @@ noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
 	createBindIf "LEFT" "left" "left; noobafk_resetAutoAfkCounter;";
 	createBindIf "RIGHT" "right" "right; noobafk_resetAutoAfkCounter;";
 	createBindIf "DOWN" "backward" "backward; noobafk_resetAutoAfkCounter;";
-		
+
 	// Settings: All Keys
 	noobafk_keyForward = (searchbinds "forward");
 	noobafk_keyLeft = (searchbinds "left");
@@ -102,7 +102,7 @@ noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
 if (=s $noobafk_scriptStatus "true") [
 	noobafk_do = [
 		if (&& (!= $noobafk_isAutoAfk 1) (!= $noobafk_didIt 1)) [
-			// Don't spec in coop mode.
+			// Don't toggle spectator in coop edit mode.
 			if (!= (getmode) 1) [
 				spectator 1;
 			]
@@ -124,7 +124,7 @@ if (=s $noobafk_scriptStatus "true") [
 	
 	noobafk_undo = [
 		if (|| (= $noobafk_isAutoAfk 1) (= $noobafk_didIt 1)) [
-			// Not in spec in coop mode.
+			// Don't toggle spectator in coop edit mode.
 			if (!= (getmode) 1) [
 				spectator 0;
 			]
@@ -204,6 +204,22 @@ if (=s $noobafk_scriptStatus "true") [
 	]
 
 	bindOptionalKey "noobafk" "noobafk_keyPress";
+	
+	noobafk_check_if_still_connected = [
+		sleep 1000 [
+			if (= (isconnected) 0) [
+				if (|| (= $noobafk_didIt 1) (= $noobafk_isAutoAfk 1)) [
+					noobafk_undo;
+					noobafk_didIt = 0;
+					noobafk_isAutoAfk = 0;
+				]
+			]
+			
+			noobafk_check_if_still_connected;
+		]
+	]
+	
+	noobafk_check_if_still_connected;
 ][
 	// The script is deactivated. Check if the keys binds have to be reset.
 	createBindIf "UP" "forward; noobafk_resetAutoAfkCounter;" "forward";
