--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -25,7 +25,7 @@ if (=s $noobpro_scriptStatus "true") [
 		nInit noobpro_hidedeadBackup 0
 		
 		
-		if (strcmp $noobpro_param "reset") [
+		if (=s $noobpro_param "reset") [
 
 			texreduce noobpro_texreduceBackup;
 			fullbrightmodels noobpro_fullbrightmodelsBackup;
@@ -39,6 +39,7 @@ if (=s $noobpro_scriptStatus "true") [
 			noobpro_fullbrightmodelsBackup = $fullbrightmodels;
 			noobpro_waterreflectBackup = $waterreflect;
 			noobpro_waterrefractBackup = $waterrefract;
+			noobpro_hidedeadBackup = $hidedead;
 			
 			if (!=s $texreduce noobpro_texreduceSetting) [
 				texreduce $noobpro_texreduceSetting
