noobpro: don't annoy user with confirm dialog
don't annoy the user with the confirm dialog when he enable/disable
noobpro

--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -24,6 +24,7 @@ if (=s $noobpro_scriptStatus "true") [
 		nInit noobpro_hidedeadSetting 1
 		nInit noobpro_hidedeadBackup 0
 		
+		applydialog 0; 
 		
 		if (=s $noobpro_param "reset") [
 
@@ -62,5 +63,8 @@ if (=s $noobpro_scriptStatus "true") [
 			]
 		
 		]
+		
+		resetgl; 
+		applydialog 1;
 	]
 ]
