nooblayouter: add select gui

--- a/packages/scripts/nsl/nooby/nooblayouter.cfg
+++ b/packages/scripts/nsl/nooby/nooblayouter.cfg
@@ -1,14 +1,37 @@
+nooblayouter_first_startup_run = 1;
+
 if (=s (nsl_is_script_enabled "nooblayouter" "true") "true") [
 
+	nInit nooblayouter_layoutname "default";
+	
 	nooblayouter_change_layout = [
-		local layoutname;
-		layoutname = $arg1;
+		if (&& (= $nooblayouter_first_startup_run -1) (!=s $nooblayouter_layoutname "default")) [
+			removezip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname);
+		]
 		
-		addzip (concatword "packages/scripts/nsl/nooby/layouts/" $layoutname);
+		nooblayouter_layoutname = $arg1;
+		nooblayouter_layoutnumber = $arg2;
+		
+		addzip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname);
 		resetgl;
+		
+		nooblayouter_first_startup_run = -1;
 	]
 
-	nooblayouter_change_layout "banabread";
+	nooblayouter_change_layout "banabread" 1;
+	
+	newgui nooblayouter [
+		local file i;
+		
+		guiradio "default" nooblayouter_layoutnumber 0 [ removezip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname); resetgl; nooblayouter_layoutnumber = 0; nooblayouter_layoutname = "default" ]
+		
+		i = 1;
+
+		loopfiles file "packages/scripts/nsl/nooby/layouts/" zip [
+			guiradio $file nooblayouter_layoutnumber $i [ if (!=s $nooblayouter_layoutname @file) [ nooblayouter_change_layout @@file @@i; ] ]
+			++ i;
+		]
+	]
 
 ]
 
