simple too much to tell
seriously

--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -1,7 +1,5 @@
-noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
-
 // Load the script settings
-	noobafk_settings = (getRunScriptOptions "noobafk");
+	noobafk_settings = (getRunScriptOptions "nooby/noobafk");
 
 // Init all Settings
 	// Settings: Tag
@@ -34,7 +32,7 @@ noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
 	noobafk_keyAttack = (searchbinds "attack");
 	noobafk_keyJump = (searchbinds "jump");
 	noobafk_keyMsg = (searchbinds "saycommand");
-	noobafk_keyBindManually = (getRunScriptKey "noobafk");
+	noobafk_keyBindManually = (nsl_get_script_key "noobafk");
 	
 	nInit noobafk_keyForwardStore "";
 	nInit noobafk_keyLeftStore "";
@@ -99,7 +97,7 @@ noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
 // End if init settings
 
 // Is the script active?
-if (=s $noobafk_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobafk" "true") "true") [
 	noobafk_do = [
 		if (&& (!= $noobafk_isAutoAfk 1) (!= $noobafk_didIt 1)) [
 			// Don't toggle spectator in coop edit mode.
@@ -203,7 +201,7 @@ if (=s $noobafk_scriptStatus "true") [
 		]
 	]
 
-	bindOptionalKey "noobafk" "noobafk_keyPress";
+	bindOptionalKey "nooby/noobafk" "noobafk_keyPress";
 	
 	noobafk_check_if_still_connected = [
 		sleep 1000 [
