--- a/packages/scripts/nsl/nooby/noobauth.cfg
+++ b/packages/scripts/nsl/nooby/noobauth.cfg
@@ -15,4 +15,4 @@ noobauth = [
 	]
 ]
 
-nsl_bind_key_if_script_enabled "noobauth" "noobauth" "bind" "false";
+nsl_bind_key_if_script_enabled "nooby/noobauth" "noobauth" "bind" "false";
