--- a/packages/scripts/nsl/nooby/noobautosorry.cfg
+++ b/packages/scripts/nsl/nooby/noobautosorry.cfg
@@ -1,6 +1,4 @@
-noobautosorry_scriptStatus = (nsl_is_script_enabled "noobautosorry" "true");
-
-if (=s $noobautosorry_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobautosorry" "true") "true") [
 
 	// Load the script options
 		noobautosorry_options = (getRunScriptOptions "noobautosorry");
