--- a/packages/scripts/nsl/nooby/noobeasygetmap.cfg
+++ b/packages/scripts/nsl/nooby/noobeasygetmap.cfg
@@ -7,4 +7,4 @@ noob_easyGetMap = [
 	]
 ]
 
-nsl_bind_key_if_script_enabled "noobeasygetmap" "noob_easyGetMap";
+nsl_bind_key_if_script_enabled "nooby/noobeasygetmap" "noob_easyGetMap";
