--- a/packages/scripts/nsl/nooby/noobexplain.cfg
+++ b/packages/scripts/nsl/nooby/noobexplain.cfg
@@ -1,5 +1,3 @@
-noobexplain_scriptStatus = (nsl_is_script_enabled "noobexplain" "false");
-
 noobexplainations = [
 	"license"		 "License: A license manage what you allowed to do - under which terms something is allowed, and what is forbidden."
 	
@@ -41,7 +39,7 @@ noobexplainations_translate_de = [
 
 ]
 
-if (=s $noobafk_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobexplain" "false") "true") [
 	explain = [
 		noobexplain_id = $arg1;
 		
