--- a/packages/scripts/nsl/nooby/nooblayouter.cfg
+++ b/packages/scripts/nsl/nooby/nooblayouter.cfg
@@ -1,6 +1,6 @@
 nooblayouter_first_startup_run = 1;
 
-if (=s (nsl_is_script_enabled "nooblayouter" "true") "true") [
+if (=s (nsl_is_script_enabled "nooby/nooblayouter" "true") "true") [
 
 	nInit nooblayouter_layoutname "default";
 	
@@ -12,7 +12,10 @@ if (=s (nsl_is_script_enabled "nooblayouter" "true") "true") [
 		nooblayouter_layoutname = $arg1;
 		nooblayouter_layoutnumber = $arg2;
 		
-		addzip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname);
+		if (!=s $nooblayouter_layoutname "default") [
+			addzip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname);
+		]
+		
 		resetgl;
 		
 		nooblayouter_first_startup_run = -1;
@@ -23,7 +26,7 @@ if (=s (nsl_is_script_enabled "nooblayouter" "true") "true") [
 	newgui nooblayouter [
 		local file i;
 		
-		guiradio "default" nooblayouter_layoutnumber 0 [ removezip (concatword "packages/scripts/nsl/nooby/layouts/" $nooblayouter_layoutname); resetgl; nooblayouter_layoutnumber = 0; nooblayouter_layoutname = "default" ]
+		guiradio "default" nooblayouter_layoutnumber 0 [ nooblayouter_change_layout "default" 0; ]
 		
 		i = 1;
 
