--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -1,9 +1,5 @@
-noobpro_scriptStatus = (nsl_is_script_enabled "noobpro" "true");
-
-// End if init settings
-
 // Is the script active?
-if (=s $noobpro_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobpro" "true") "true") [
 	noobpro = [
 		local noobpro_param;
 		
