--- a/packages/scripts/nsl/nooby/noobservers.cfg
+++ b/packages/scripts/nsl/nooby/noobservers.cfg
@@ -1,6 +1,4 @@
-noobservers_scriptStatus = (nsl_is_script_enabled "noobservers" "true");
-
-if (=s $noobservers_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobservers" "true") "true") [
 	newgui Noobservers [
 		guistayopen [ 
 			guilist [	
@@ -18,5 +16,5 @@ if (=s $noobservers_scriptStatus "true") [
 		]
 	]
 
-	bindKey "noobservers" "showgui Noobservers";
+	bindKey "nooby/noobservers" "showgui Noobservers";
 ]
