--- a/packages/scripts/nsl/nooby/noobstats.cfg
+++ b/packages/scripts/nsl/nooby/noobstats.cfg
@@ -1,6 +1,4 @@
-statsprinter_scriptStatus = (nsl_is_script_enabled "statsprinter" "true");
-
-if (=s $statsprinter_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobstats" "true") "true") [
 	round = [
 		local split;
 		
@@ -13,12 +11,12 @@ if (=s $statsprinter_scriptStatus "true") [
 		
 		red  = [ result "^f3" ]
 		blue = [ result "^f1" ]
-		   
+	
 		frags   = (getfrags)
 		deaths  = (getdeaths)
 		acc     = (getaccuracy)
 		flags   = (getflags)
-		   
+	
 		ldeaths = $deaths;
 		if (= $ldeaths 0) [ ldeaths = 1; ]
 		kpd = (round (divf $frags $ldeaths) 2)
@@ -28,5 +26,5 @@ if (=s $statsprinter_scriptStatus "true") [
 		echo (concatword "^f5[ STATS ] " (blue) "Name: " (red) (getname) (blue) " Frags: " (red) $frags (blue) " Deaths: " (red) $deaths (blue) " Acc: " (red) $acc "%" (blue) " KpD: " (red) $kpd $flags);
 	]
 	
-	bindKey "statsprinter" "echo_stats";
+	bindKey "nooby/noobstats" "echo_stats";
 ]
