--- a/packages/scripts/nsl/nooby/noobysraceroptions.cfg
+++ b/packages/scripts/nsl/nooby/noobysraceroptions.cfg
@@ -1,6 +1,4 @@
-noobysracer_scriptStatus = (nsl_is_script_enabled "noobysraceroptions" "false");
-
-if (=s $noobysracer_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobysraceroptions" "false") "true") [
 	newgui NoobRacer [
 		guistayopen [  
 			guilist [	
@@ -49,5 +47,5 @@ if (=s $noobysracer_scriptStatus "true") [
 		]
 	]
 	
-	bindKey "noobysraceroptions" "showgui NoobRacer";
+	bindKey "nooby/noobysraceroptions" "showgui NoobRacer";
 ]
