--- a/packages/scripts/nsl/nooby/noobysrules.cfg
+++ b/packages/scripts/nsl/nooby/noobysrules.cfg
@@ -1,6 +1,4 @@
-noobysrules_scriptStatus = (nsl_is_script_enabled "noobysrules" "false");
-
-if (=s $noobysrules_scriptStatus "true") [
+if (=s (nsl_is_script_enabled "nooby/noobysrules" "false") "true") [
 	// General Rules:
 	bind "KP1" [say "^f0[ Rule #1 ] ^f2Type /getmap to get the map!"]
 	bind "KP2" [say "^f0[ Rule #2 ] ^f2Don't edit the maps."]
