--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -1,18 +1,18 @@
 // Load the script settings
-	noobafk_settings = (getRunScriptOptions "nooby/noobafk");
+	noobafk_settings = (nsl_get_script_options_data "nooby/noobafk");
 
 // Init all Settings
 	// Settings: Tag
-	noobafk_afkTag = (getRunScriptSpecificOptions $noobafk_settings "afkTag" ">AFK");
+	noobafk_afkTag = (nsl_get_script_option $noobafk_settings "afkTag" ">AFK");
 	
 	// Settings: TagKind - Prefix or Suffix
-	noobafk_afkTagKind = (getRunScriptSpecificOptions $noobafk_settings "afkTagKind" "suffix");
+	noobafk_afkTagKind = (nsl_get_script_option $noobafk_settings "afkTagKind" "suffix");
 	
 	// Settings: autoAfk - Would you like to get auto spec + rename if you afk?
-	noobafk_autoAfk = (getRunScriptSpecificOptions $noobafk_settings "autoAfk" "true");
+	noobafk_autoAfk = (nsl_get_script_option $noobafk_settings "autoAfk" "true");
 	
 	// Settings: secondsAutoAfk - Seconds until you get autospec + "afk" rename, minimum 30 seconds
-	noobafk_secondsAutoAfk = (getRunScriptSpecificOptions $noobafk_settings "secondsAutoAfk" 600);
+	noobafk_secondsAutoAfk = (nsl_get_script_option $noobafk_settings "secondsAutoAfk" 600);
 	
 	if (< $noobafk_secondsAutoAfk 30) [
 		noobafk_secondsAutoAfk = 30;
