--- a/packages/scripts/nsl/nooby/noobautosorry.cfg
+++ b/packages/scripts/nsl/nooby/noobautosorry.cfg
@@ -1,10 +1,10 @@
 if (=s (nsl_is_script_enabled "nooby/noobautosorry" "true") "true") [
 
 	// Load the script options
-		noobautosorry_options = (getRunScriptOptions "noobautosorry");
+		noobautosorry_options = (nsl_get_script_options_data "nooby/noobautosorry");
 
 	// Say sorry to the team or to all players?
-		noobautosorry_sayToOption = (getRunScriptSpecificOptions $noobautosorry_options "sayto");
+		noobautosorry_sayToOption = (nsl_get_script_option $noobautosorry_options "sayto");
 	
 		if (=s $noobautosorry_sayToOption "all") [
 			alias noobautosorry_howTo say;
@@ -13,7 +13,7 @@ if (=s (nsl_is_script_enabled "nooby/noobautosorry" "true") "true") [
 		]
 
 	// Which message should be posted?
-		noobautosorry_srymsg = (getRunScriptSpecificOptions $noobautosorry_options "srymsg" "Sorry for that teamkill mate!");
+		noobautosorry_srymsg = (nsl_get_script_option $noobautosorry_options "srymsg" "Sorry for that teamkill mate!");
 		
 	// You did a teamkill? Shame on you!
 	noob_autosorry = [
