noobexplain: cleanup code
use list handle functions; remove redundant code

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -289,7 +289,7 @@ nsl_get_script_data = [
 // @arg1 script name
 // @arg2 default setting, used if there isn't a setting saved (optional)
 // @return results true or false
-// @example nsl_is_script_enabled "autosorry"
+// @example nsl_is_script_enabled "nooby/autosorry"
 nsl_is_script_enabled = [
 	local noob_scriptName scriptData;
 	
