--- a/packages/scripts/nsl/nooby/noobexplain.cfg
+++ b/packages/scripts/nsl/nooby/noobexplain.cfg
@@ -10,6 +10,8 @@ noobexplainations = [
 	// Sauer Community Stuff
 	"sauer-changes"	 "You have good ideas what we can do to expand the sauer community or just get a better community? Then don't be shy to contribute here: https://poop.piratenpad.de/sauer-changes - Cu there! :)"
 	
+	"sauer-fork" 	 "Sauer fork: We want to improve sauerbraten so we can still have fun together tomorrow. More info: https://github.com/sauerbraten-fork"
+	
 	"tesseract" 	 "Tesseract provides a derived from Sauerbraten technology but with upgraded modern rendering techniques. Website: tesseract.gg"
 	"tesseract-features" "The new rendering features include fully dynamic omnidirectional shadows, global illumination, HDR lighting, deferred shading, anti-aliasing, and much more."
 	
@@ -29,25 +31,30 @@ noobexplainations = [
 	
 	// Funnies
 	"evil"			"The evil is named D:_Diamonds."
-	"angel"			"A2K|Mephisto will be one day an angel."
-]
-
-noobexplainations_translate_de = [
-	"license"		 "Eine Lizenz sagt aus, unter welchen Bedingungen was erlaubt ist und was verboten ist."
+	"angel"			"Mephisto will be one day an angel."
 	
-	"cc-by-sa" 		"Creative Commans Attribution-Share-Alike (CC-BY-SA): Diese Lizenz erlaubt es deine Werke zu teilen, zu verbessern, zu veraendern und zu remixen, sowie auf deinen Werken aufzubauen. Auch kommerzielle Nutzung ist erlaubt. Allerdings muss klar ersichtlich sein von wen die Werke kommen (Namensnennung). Desweiteren muessen saemtliche neue Werke unter den selben Bedingungen gestellt werden. Mehr Infos: https://creativecommons.org/licenses/by-sa/4.0/deed.de"
-
+	
+	// German Translations
+	"license_DE"		 "Eine Lizenz sagt aus, unter welchen Bedingungen was erlaubt ist und was verboten ist."
+	
+	"cc-by-sa_DE" 		"Creative Commans Attribution-Share-Alike (CC-BY-SA): Diese Lizenz erlaubt es deine Werke zu teilen, zu verbessern, zu veraendern und zu remixen, sowie auf deinen Werken aufzubauen. Auch kommerzielle Nutzung ist erlaubt. Allerdings muss klar ersichtlich sein von wen die Werke kommen (Namensnennung). Desweiteren muessen saemtliche neue Werke unter den selben Bedingungen gestellt werden. Mehr Infos: https://creativecommons.org/licenses/by-sa/4.0/deed.de"
 ]
 
 if (=s (nsl_is_script_enabled "nooby/noobexplain" "false") "true") [
 	explain = [
+		local noobexplain_id;
 		noobexplain_id = $arg1;
 		
-		if (= (strcmp $noobexplain_id "") 0) [
-			noobexplain_indexMapData = (indexof $noobexplainations $noobexplain_id);
+		if (!=s $arg2 "") [
+			noobexplain_id = (concatword $noobexplain_id "_" $arg2);
+		]
+		
+		if (!=s $noobexplain_id "") [
+			local explainTxt;
+			explainTxt = (nListGetValue noobexplainations $noobexplain_id);
 			
-			if (!= $noobexplain_indexMapData -1) [
-				say (at $noobexplainations (+ $noobexplain_indexMapData 1));
+			if (!=s $explainTxt -1) [
+				say $explainTxt;
 			][
 				echo (concatword "^f0[ EXPLAIN ] ^f6The shortcut '" $noobexplain_id "' was not found.");
 			]
@@ -55,17 +62,7 @@ if (=s (nsl_is_script_enabled "nooby/noobexplain" "false") "true") [
 	]
 	
 	explain_de = [
-		noobexplain_id = $arg1;
-		
-		if (= (strcmp $noobexplain_id "") 0) [
-			noobexplain_indexMapData = (indexof $noobexplainations_translate_de $noobexplain_id);
-			
-			if (!= $noobexplain_indexMapData -1) [
-				say (at $noobexplainations_translate_de (+ $noobexplain_indexMapData 1));
-			][
-				echo (concatword "^f0[ EXPLAIN ] ^f6The shortcut '" $noobexplain_id "' was not found.");
-			]
-		]
+		explain $arg1 "DE"
 	]
 ][
 	// Script is disable, overwrite function and list so they get removed from the config.cfg
