--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -227,10 +227,12 @@ nListGetValue = [
 	]
 	
 	looplist key $arg2 [
-		if (= (indexof $zTMPGetList $key) -1) [
-			zTMPGetList = -1;
-		][
-			zTMPGetList = (at $zTMPGetList (+ (indexof $zTMPGetList $key) 1))
+		if (!=s $zTMPGetList -1) [
+			if (= (indexof $zTMPGetList $key) -1) [
+				zTMPGetList = -1;
+			][
+				zTMPGetList = (at $zTMPGetList (+ (indexof $zTMPGetList $key) 1))
+			]
 		]
 	]
 	
@@ -278,7 +280,7 @@ exec_outlaw = [
 
 // Results the data string of the script
 // @arg1 script name
-// @return data string of the script
+// @return data string of the script or -1 if there isn't a match
 // @example nsl_get_script_data "nooby/autosorry"
 nsl_get_script_data = [
 	result (nListGetValue nslSettings $arg1)
@@ -308,14 +310,19 @@ nsl_is_script_enabled = [
 ]
 
 nsl_from_file_to_script_name =  [
-	local scriptName;
+	local scriptName scriptNameNew;
 	
 	scriptName = $arg1;
 	
 	scriptName = (strreplace $scriptName $nslScriptDirectory "")
 	scriptName = (strreplace $scriptName "nsl/"	"")
-	
-	result $scriptName;
+	scriptNameNew = (nListGetValue (nsl_get_script_data (strreplace $scriptName ".cfg" "")) "name" "local");
+
+	if (!=s $scriptNameNew -1) [
+		result @scriptNameNew;
+	][
+		result @scriptName;
+	]
 ]
 
 nsl_toggle_script = [
