nooblib: add nsl_add_menu_point

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -249,6 +249,8 @@ nslVersion = "0.9";
 
 nslDefaultSauerFiles = [auth.cfg autoexec.cfg config.cfg init.cfg restore.cfg rpg_config.cfg rpg_restore.cfg servers.cfg server-init.cfg]
 
+nslScriptMenu = [];
+
 // init the nsl
 nsl_init = [
 	nslSettings = $arg1;
@@ -443,6 +445,12 @@ bindOptionalKey = [
 	][
 		bindKey $noob_scriptName $noob_scriptAction $noob_keyKind;
 	]
+]
+
+// Nightly function
+
+nsl_add_menu_point = [
+	nslScriptMenu = (concatword $nslScriptMenu " " (concatword "^[title ^"" $arg1 "^" function ^"" $arg2 "^" icon ^"" $arg3 "^"  guistayopen ^"" $arg4 "^"^]"));
 ]
 
 // Check first start after installation or updating the NSL
