adjust nsl_add_menu_point, use it in some scripts

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -450,7 +450,7 @@ bindOptionalKey = [
 // Nightly function
 
 nsl_add_menu_point = [
-	nslScriptMenu = (concatword $nslScriptMenu " " (concatword "^[title ^"" $arg1 "^" function ^"" $arg2 "^" icon ^"" $arg3 "^"  guistayopen ^"" $arg4 "^"^]"));
+	nslScriptMenu = (concatword $nslScriptMenu $arg1 " " (concatword "^[title ^"" $arg2 "^" function ^"" $arg3 "^" icon ^"" $arg4 "^"  guistayopen ^"" $arg5 "^"^] "));
 ]
 
 // Check first start after installation or updating the NSL
