--- a/packages/scripts/nsl/nooby/noobmenus.cfg
+++ b/packages/scripts/nsl/nooby/noobmenus.cfg
@@ -43,13 +43,21 @@ if (=s (nsl_is_script_enabled "nooby/noobmenus" "true") "true") [
 			if (!=s $nslScriptMenu []) [
 				guibar
 				guilist [	
+					noobmenus_loop = 0;
+					
 					looplist noobmenus_script $nslScriptMenu [
-						if (= (nListGetValue $noobmenus_script "guistayopen" "local") 1) [
-							guistayopen [
+						++ noobmenus_loop;
+						
+						if (= $noobmenus_loop 2) [
+							if (= (nListGetValue $noobmenus_script "guistayopen" "local") 1) [
+								guistayopen [
+									guibutton (nListGetValue $noobmenus_script "title" "local") (nListGetValue $noobmenus_script "function" "local") (nListGetValue $noobmenus_script "icon" "local");
+								]
+							][
 								guibutton (nListGetValue $noobmenus_script "title" "local") (nListGetValue $noobmenus_script "function" "local") (nListGetValue $noobmenus_script "icon" "local");
 							]
-						][
-							guibutton (nListGetValue $noobmenus_script "title" "local") (nListGetValue $noobmenus_script "function" "local") (nListGetValue $noobmenus_script "icon" "local");
+							
+							noobmenus_loop = 0;
 						]
 					]
 				]
