--- a/packages/scripts/nsl/nooby/noobservers.cfg
+++ b/packages/scripts/nsl/nooby/noobservers.cfg
@@ -1,4 +1,7 @@
 if (=s (nsl_is_script_enabled "nooby/noobservers" "true") "true") [
+
+	nsl_add_menu_point "nooby/noobservers" "NoobServers" "showgui Noobservers" "arrow_fw.jpg";
+	
 	newgui Noobservers [
 		guistayopen [ 
 			guilist [	
