--- a/packages/scripts/nsl/nooby/noobysraceroptions.cfg
+++ b/packages/scripts/nsl/nooby/noobysraceroptions.cfg
@@ -1,4 +1,7 @@
 if (=s (nsl_is_script_enabled "nooby/noobysraceroptions" "false") "true") [
+
+	nsl_add_menu_point "nooby/noobysraceroptions" "NoobRacer" "showgui NoobRacer" "arrow_fw.jpg";
+	
 	newgui NoobRacer [
 		guistayopen [  
 			guilist [	
