noobpro: fix restore of the user settings

--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -20,15 +20,17 @@ if (=s (nsl_is_script_enabled "nooby/noobpro" "true") "true") [
 		nInit noobpro_hidedeadSetting 1
 		nInit noobpro_hidedeadBackup 0
 		
+		noobpro_applydialogBackup = $applydialog;
+		
 		applydialog 0; 
 		
 		if (=s $noobpro_param "reset") [
 
-			texreduce noobpro_texreduceBackup;
-			fullbrightmodels noobpro_fullbrightmodelsBackup;
-			waterreflect noobpro_waterreflectBackup;
-			waterrefract noobpro_waterrefractBackup;
-			hidedead noobpro_hidedeadBackup;
+			texreduce $noobpro_texreduceBackup;
+			fullbrightmodels $noobpro_fullbrightmodelsBackup;
+			waterreflect $noobpro_waterreflectBackup;
+			waterrefract $noobpro_waterrefractBackup;
+			hidedead $noobpro_hidedeadBackup;
 
 		][
 
@@ -61,6 +63,6 @@ if (=s (nsl_is_script_enabled "nooby/noobpro" "true") "true") [
 		]
 		
 		resetgl; 
-		applydialog 1;
+		applydialog $noobpro_applydialogBackup;
 	]
 ]
